# ByteReaper

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
editor/src/: Editor.cpp
editor/src/export/: CsvExporter.cpp  CsvExporter.h  ReportExporter.cpp  ReportExporter.h
editor/src/panels/: AsciiPanel.cpp  AsciiPanel.h  EntropyPanel.cpp  EntropyPanel.h  HexViewPanel.cpp  HexViewPanel.h  MetadataPanel.cpp  MetadataPanel.h  SearchPanel.cpp  SearchPanel.h  StringsPanel.cpp  StringsPanel.h  StructurePanel.cpp  StructurePanel.h
editor/src/platform/: DragDrop.cpp  DragDrop.h  FileDialog.cpp  FileDialog.h
editor/src/widgets/: ByteColorizer.cpp  ByteColorizer.h  HexCell.cpp  HexCell.h  StatusBar.cpp  StatusBar.h  Toolbar.cpp  Toolbar.h
engine/include/: Application.h  Assert.h  ByteReaper.h  ByteUtils.h  Core.h  EntropyAnalyzer.h  EntryPoint.h  FileLoader.h  HexBuffer.h  Layer.h  LayerStack.h  Log.h  MagicBytes.h  MetadataParser.h  SearchEngine.h  StringExtractor.h  Types.h  Window.h
engine/src/core/: Application.cpp  Log.cpp  Window.cpp
engine/src/layers/: Layer.cpp  LayerStack.cpp
engine/src/search/: SearchEngine.cpp
